dataset_importer(details modal), task_manager, fix table overflows.

--- a/static/task_manager/task_manager.css
+++ b/static/task_manager/task_manager.css
@@ -149,3 +149,6 @@
     grid-template-columns: 100%;
     grid-template-rows: 45px 1fr;
 }
+.content-wrap td{
+    white-space: normal !important;
+}
